versioned_docs/version-2.13/reference/subsystems/setuptools-scm.mdx
---
title: setuptools-scm
description: |
  A tool for generating versions from VCS metadata (https://github.com/pypa/setuptools_scm).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A tool for generating versions from VCS metadata (https://github.com/pypa/setuptools_scm).

Backend: <span className="color--primary">`pants.backend.experimental.python`</span>

Config section: <span className="color--primary">`[setuptools-scm]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `console_script`

<Option
  cli_repr={`--setuptools-scm-console-script=<str>`}
  env_repr='PANTS_SETUPTOOLS_SCM_CONSOLE_SCRIPT'
  toml_repr={`[setuptools-scm]
console_script = <str>`}
  default_repr={`None`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--setuptools-scm-entry-point=<str>`}
  env_repr='PANTS_SETUPTOOLS_SCM_ENTRY_POINT'
  toml_repr={`[setuptools-scm]
entry_point = <str>`}
  default_repr={`setuptools_scm`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--setuptools-scm-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SETUPTOOLS_SCM_EXTRA_REQUIREMENTS'
  toml_repr={`[setuptools-scm]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--setuptools-scm-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SETUPTOOLS_SCM_INTERPRETER_CONSTRAINTS'
  toml_repr={`[setuptools-scm]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<4"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `lockfile`

<Option
  cli_repr={`--setuptools-scm-lockfile=<str>`}
  env_repr='PANTS_SETUPTOOLS_SCM_LOCKFILE'
  toml_repr={`[setuptools-scm]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.13.1/src/python/pants/backend/python/subsystems/setuptools_scm.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/pants generate-lockfiles --resolve=setuptools-scm`.

As explained at https://www.pantsbuild.org/v2.13/docs/python-third-party-dependencies, lockfile generation via `generate-lockfiles` does not always work and you may want to manually generate the lockfile. You will want to set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

### `version`

<Option
  cli_repr={`--setuptools-scm-version=<str>`}
  env_repr='PANTS_SETUPTOOLS_SCM_VERSION'
  toml_repr={`[setuptools-scm]
version = <str>`}
  default_repr={`setuptools-scm==6.4.2`}
>

Requirement string for the tool.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
